--- a/src/wwwroot/index.html
+++ b/src/wwwroot/index.html
@@ -9,7 +9,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link href="lib/font-awesome/css/all.min.css" rel="stylesheet" />
     <link href="css/app.min.css" rel="stylesheet" />
-    <link href="Blazor.Frontend.Bootstrap.styles.css" rel="stylesheet" />
+    <link href="Frontend.Blazor.Bootstrap.styles.css" rel="stylesheet" />
 </head>
 
 <body>
